--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.page-container {
+  margin-left: 200px;
+}
+.container-fluid {
+  padding: 0px;
+}
